src/ffi.rs

#[test]
fn bindgen_test_layout__TXTRecordRef_t() {
    assert_eq!(
        ::std::mem::size_of::<_TXTRecordRef_t>(),
        16usize,
        concat!("Size of: ", stringify!(_TXTRecordRef_t))
    );
    assert_eq!(
        ::std::mem::align_of::<_TXTRecordRef_t>(),
        8usize,
        concat!("Alignment of ", stringify!(_TXTRecordRef_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<_TXTRecordRef_t>())).PrivateData as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(_TXTRecordRef_t),
            "::",
            stringify!(PrivateData)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_TXTRecordRef_t>())).ForceNaturalAlignment as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(_TXTRecordRef_t),
            "::",
            stringify!(ForceNaturalAlignment)
        )
    );
}
pub type TXTRecordRef = _TXTRecordRef_t;
extern "C" {
    pub fn TXTRecordCreate(
        txtRecord: *mut TXTRecordRef,
        bufferLen: u16,
        buffer: *mut ::std::os::raw::c_void,
    );
}
extern "C" {
    pub fn TXTRecordDeallocate(txtRecord: *mut TXTRecordRef);
}
extern "C" {
    pub fn TXTRecordSetValue(
        txtRecord: *mut TXTRecordRef,
        key: *const ::std::os::raw::c_char,
        valueSize: u8,
        value: *const ::std::os::raw::c_void,
    ) -> DNSServiceErrorType;
}
extern "C" {
    pub fn TXTRecordRemoveValue(
        txtRecord: *mut TXTRecordRef,
        key: *const ::std::os::raw::c_char,
    ) -> DNSServiceErrorType;
}
extern "C" {
    pub fn TXTRecordGetLength(txtRecord: *const TXTRecordRef) -> u16;
}
extern "C" {
    pub fn TXTRecordGetBytesPtr(txtRecord: *const TXTRecordRef) -> *const ::std::os::raw::c_void;
}
extern "C" {
    pub fn TXTRecordContainsKey(
        txtLen: u16,
        txtRecord: *const ::std::os::raw::c_void,
        key: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn TXTRecordGetValuePtr(
        txtLen: u16,
        txtRecord: *const ::std::os::raw::c_void,
        key: *const ::std::os::raw::c_char,
        valueLen: *mut u8,
    ) -> *const ::std::os::raw::c_void;
}
extern "C" {
    pub fn TXTRecordGetCount(txtLen: u16, txtRecord: *const ::std::os::raw::c_void) -> u16;
}
extern "C" {
    pub fn TXTRecordGetItemAtIndex(
        txtLen: u16,
        txtRecord: *const ::std::os::raw::c_void,
        index: u16,
        keyBufLen: u16,
        key: *mut ::std::os::raw::c_char,
        valueLen: *mut u8,
        value: *mut *const ::std::os::raw::c_void,
    ) -> DNSServiceErrorType;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct DNS_SD_CompileTimeAssertionChecks {
    pub assert0: [::std::os::raw::c_char; 1usize],
}
#[test]
fn bindgen_test_layout_DNS_SD_CompileTimeAssertionChecks() {
    assert_eq!(
        ::std::mem::size_of::<DNS_SD_CompileTimeAssertionChecks>(),
        1usize,
        concat!("Size of: ", stringify!(DNS_SD_CompileTimeAssertionChecks))
    );
    assert_eq!(
        ::std::mem::align_of::<DNS_SD_CompileTimeAssertionChecks>(),
        1usize,
        concat!(
            "Alignment of ",
            stringify!(DNS_SD_CompileTimeAssertionChecks)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<DNS_SD_CompileTimeAssertionChecks>())).assert0 as *const _
                as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(DNS_SD_CompileTimeAssertionChecks),
            "::",
            stringify!(assert0)
        )
    );
}
pub type __builtin_va_list = [__va_list_tag; 1usize];
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __va_list_tag {
    pub gp_offset: ::std::os::raw::c_uint,
    pub fp_offset: ::std::os::raw::c_uint,
    pub overflow_arg_area: *mut ::std::os::raw::c_void,
    pub reg_save_area: *mut ::std::os::raw::c_void,
}
#[test]
fn bindgen_test_layout___va_list_tag() {
    assert_eq!(
        ::std::mem::size_of::<__va_list_tag>(),
        24usize,
        concat!("Size of: ", stringify!(__va_list_tag))
    );
    assert_eq!(
        ::std::mem::align_of::<__va_list_tag>(),
        8usize,
        concat!("Alignment of ", stringify!(__va_list_tag))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__va_list_tag>())).gp_offset as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(__va_list_tag),
            "::",
            stringify!(gp_offset)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__va_list_tag>())).fp_offset as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(__va_list_tag),
            "::",
            stringify!(fp_offset)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__va_list_tag>())).overflow_arg_area as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(__va_list_tag),
            "::",
            stringify!(overflow_arg_area)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__va_list_tag>())).reg_save_area as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(__va_list_tag),
            "::",
            stringify!(reg_save_area)
        )
    );
}
